# freeswitch-modules

./: CONTRIBUTING.md  COPYING  COPYING.md  LICENSE_MIT  README.md
mod_assemblyai_transcribe/: aai_transcribe_glue.cpp  audio_pipe.cpp  audio_pipe.hpp  mod_assemblyai_transcribe.c
mod_audio_fork/: Makefile.am  ap.h  ap_http.cpp  ap_http.h  audio_pipe.cpp  audio_pipe.hpp  common.h  dub_glue.cpp  dub_glue.h  lws_glue.cpp  lws_glue.h  mod_audio_fork.c  mod_audio_fork.h  mpg_decode.cpp  mpg_decode.h  track.cpp  track.h  vector_math.cpp  vector_math.h
mod_aws_lex/: Makefile.am  aws_lex_glue.cpp  mod_aws_lex.h
mod_aws_transcribe/: LICENSE  Makefile.am  audio_pipe.cpp  audio_pipe.hpp  aws_transcribe_glue.cpp  mod_aws_transcribe.h  transcribe_manager.cpp
mod_aws_transcribe_ws/: Makefile.am  README.md  audio_pipe.cpp  aws_transcribe_glue.cpp  aws_transcribe_glue.h  mod_aws_transcribe_ws.c  mod_aws_transcribe_ws.h  transcribe_manager.cpp  transcribe_manager.hpp
mod_azure_transcribe/: azure_transcribe_glue.cpp  mod_azure_transcribe.c  mod_azure_transcribe.h
mod_azure_tts/: Makefile.am  azure_glue.cpp  azure_glue.h  mod_azure_tts.c  mod_azure_tts.h
mod_custom_tts/: Makefile.am  README.md  custom_glue.cpp  custom_glue.h  mod_custom_tts.c  mod_custom_tts.h
mod_deepgram_transcribe/: README.md  audio_pipe.cpp  audio_pipe.hpp  dg_transcribe_glue.cpp  mod_deepgram_transcribe.c  mod_deepgram_transcribe.h
mod_deepgram_tts/: Makefile.am  deepgram_glue.cpp  deepgram_glue.h  mod_deepgram_tts.c  mod_deepgram_tts.h
mod_dialogflow/: LICENSE
mod_dialogflow_cx/: Makefile.am  google_glue.cpp  google_glue.h  mod_dialogflow_cx.c  mod_dialogflow_cx.h  parser.cpp  parser.h
mod_dub/: Makefile.am  ap.h  ap_file.cpp  ap_file.h  ap_http.cpp  ap_http.h  audio_downloader.cpp  audio_downloader.h  common.h  dub_glue.cpp  dub_glue.h  file_loader.cpp  file_loader.h  mod_dub.c  mod_dub.h  mpg_decode.cpp  mpg_decode.h  track.cpp  track.h  tts_vendor_parser.cpp  tts_vendor_parser.h  vector_math.cpp  vector_math.h
mod_elevenlabs_tts/: Makefile.am  README.md  elevenlabs_glue.cpp  elevenlabs_glue.h  mod_elevenlabs_tts.c  mod_elevenlabs_tts.h
mod_google_transcribe/: google_glue.cpp  google_glue_v1.cpp  google_glue_v2.cpp  mod_google_transcribe.c  mod_google_transcribe.h
mod_google_tts/: Makefile.am  README.md  google_glue.cpp  google_glue.h  mod_google_tts.c  mod_google_tts.h
mod_ibm_transcribe/: audio_pipe.cpp  audio_pipe.hpp  ibm_transcribe_glue.cpp  mod_ibm_transcribe.c
mod_jambonz_transcribe/: audio_pipe.cpp  audio_pipe.hpp  jb_transcribe_glue.cpp  jb_transcribe_glue.h  mod_jambonz_transcribe.c
mod_playht_tts/: Makefile.am  README.md  mod_playht_tts.c  mod_playht_tts.h  playht_glue.cpp  playht_glue.h
mod_rimelabs_tts/: Makefile.am  README.md  mod_rimelabs_tts.c  mod_rimelabs_tts.h  rimelabs_glue.cpp  rimelabs_glue.h
mod_vad_detect/: Makefile.am  README.md  mod_vad_detect.c  mod_vad_detect.h
mod_verbio_transcribe/: Makefile.am  README.md  mod_verbio_transcribe.c  mod_verbio_transcribe.h  verbio_glue.cpp  verbio_glue.h
mod_verbio_tts/: Makefile.am  README.md  mod_verbio_tts.c  mod_verbio_tts.h  verbio_glue.cpp  verbio_glue.h
mod_whisper_tts/: Makefile.am  README.md  mod_whisper_tts.c  mod_whisper_tts.h  whisper_glue.cpp  whisper_glue.h
